k8s-235/apps/elk-nhackindustries/overlays/prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk-nhackindustries
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http01-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - elk.nhackindustries.com
    - elasticsearch.elk.nhackindustries.com
    secretName: elk-nhackindustries-com-tls
  rules:
  - host: elk.nhackindustries.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              name: kibana
  - host: elasticsearch.elk.nhackindustries.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: es-nhackindustries
            port:
              number: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app.kubernetes.io/name: kibana
spec:
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
  - IPv6
  - IPv4
  ports:
    - name: kibana
      port: 80
      targetPort: 5601
      protocol: TCP
  selector:
    app.kubernetes.io/name: kibana
